STB-1452 - Implement dynamic apps using app roles